[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus_otl"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "HCRObservatory transactional layer implementation for Nexus."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "ATATools @ git+https://github.com/SETIatHCRO/ATA-Utils#egg=ATATools&subdirectory=pythonLibs",
  "brli @ git+https://github.com/MydonSolutions/BLRI",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/blri/_version.py"

[tool.setuptools]
zip-safe = false

[project.scripts]
blri_pycorr = "blri.entrypoints.correlate:correlate_cli"
blri_uvh5_diff = "blri.entrypoints.uvh5:diff"
blri_bfr5gen = "blri.entrypoints.bfr5:generate_for_raw"
blri_bfr5gen_raster = "blri.entrypoints.bfr5:generate_raster_for_raw"
blri_input_gen = "blri.entrypoints.guppi_generation:input_gen"