[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus_otl"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "HCRObservatory transactional layer implementation for Nexus."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "ATATools @ git+https://github.com/SETIatHCRO/ATA-Utils#egg=ATATools&subdirectory=pythonLibs",
  "brli @ git+https://github.com/MydonSolutions/BLRI",
  casperfpga,
  astropy,
  pydantic,
  fastapi,
  uvicorn,
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/nexus_otl/_version.py"

[tool.setuptools]
zip-safe = false

[project.scripts]
nexus_otl_metadata_server = "nexus_otl.server.serve"
